--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,18 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "aws/aws-sdk-php": "*",
+        "aws/aws-sdk-php": "^3.80",
+        "elasticsearch/elasticsearch": "^8.14",
         "iksaku/laravel-mass-update": "^1.0",
         "intervention/image-laravel": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "zus1/laravel-api-integration": "^1.0",
         "zus1/laravel-auth": "^1.0",
         "zus1/laravel-base-repository": "^1.0",
         "zus1/laravel-discriminator": "^1.0",
+        "zus1/laravel-elastic-search": "^1.0",
         "zus1/laravel-serializer": "^1.1"
     },
     "require-dev": {
